fixed spacing issue on mobile blog page

--- a/styles/sass/partials/_mediaQueries.scss
+++ b/styles/sass/partials/_mediaQueries.scss
@@ -239,9 +239,13 @@
             flex-direction: column;
             align-items: center;
             text-align: center;
+            .comment {
+                padding: 0;
+            }
         }
         .commentForm {
             form {
+                padding: 0;
                 input {
                     padding: 0;
                     &::placeholder {
